--- a/templates/index.html
+++ b/templates/index.html
@@ -121,7 +121,7 @@
                           <tr>
                             <th>Name </th>
                             <th>Date</th>
-                            <th>Time</th>
+                            <th>Time(0-24)</th>
                             <th>Tags</th>
                           </tr>
                         </thead>
@@ -144,7 +144,7 @@
                           <tr>
                             <th>Name </th>
                             <th>Date</th>
-                            <th>Time</th>
+                            <th>Time(0-24)</th>
                             <th>Tags</th>
                           </tr>
                         </thead>
@@ -167,7 +167,7 @@
                             <th>Resource</th>
                             <th>Booked By</th>
                             <th>Date</th>
-                            <th>Time</th>
+                            <th>Time(0-24)</th>
                             <th>Delete</th>
                           </tr>
                         </thead>
