--- a/templates/error.html
+++ b/templates/error.html
@@ -47,7 +47,7 @@
         <div class="col-md-6">
             <h3>ERROR</h3>
             <p class='lead'>{{ message }}</p>
-            <button type="button" class='btn btn-primary' onclick="history.go(-1)">Go Back</button>     
+            <button type="button" class='btn btn-primary' onclick="history.go(-1)">Go Back and Change</button>     
         </div>
 
     </div>
