--- a/templates/create_resource.html
+++ b/templates/create_resource.html
@@ -34,7 +34,6 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li><a href="/">Home</a></li>
-                    <li><a href="#">About</a></li>
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container -->
@@ -69,7 +68,7 @@
                         </select>
                     </div>
                     Tags<br>
-                    <input type=text name="tags" class="form-control" placeholder="t1, t2 (separated by space)"></input>
+                    <input type=text name="tags" class="form-control" placeholder="t1 t2 (separated by space)"></input>
 
                     <br><button class="btn btn-success" type="submit">Submit</button>
                 </div>
