--- a/stylesheets/css/heroic-features.css
+++ b/stylesheets/css/heroic-features.css
@@ -20,3 +20,34 @@ footer {
     margin: 50px 0;
 }
 
+.post-tag{
+  color:#1E90FF;
+  border:1px solid #1E90FF;
+  padding:4px 8px !important;
+  min-width:36px;
+  border-radius:14px;
+  margin:2px 2px 2px 0;
+  text-decoration:none;
+  text-align:center;
+  font-size:14px;
+  font-weight:600;
+  line-height:1.4;
+  white-space:nowrap;
+  display:inline-block;
+  -webkit-transition:all .3s ease;
+  -moz-transition:all .3s ease;
+  -ms-transition:all .3s ease;
+  -o-transition:all .3s ease
+  }
+.post-tag:hover{
+  color:#fff !important;
+  border:1px solid #1E90FF;
+  background:#1E90FF
+}
+.post-tag:visited{
+  color:#1E90FF
+}
+a.post-tag:hover{
+  text-decoration:none
+}
+
