--- a/templates/index.html
+++ b/templates/index.html
@@ -38,10 +38,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="#">Home</a>
-                    </li>
-                    <li>
-                        <a href="#">About</a>
+                        <a href="/">Home</a>
                     </li>
                 </ul>
             </div>
@@ -89,19 +86,14 @@
             <div style="margin:10px;">
                 <a class="btn btn-primary" href="createResource">Add New Resource</a><br>
             </div>
-            <!-- Resource Tags Well -->
-            <div class="well">
-                <h4>Resource Tags</h4>
-                <div class="row">
-                    <div class="col-lg-6">
-                        <ul class="list-unstyled">
-                            <li><a href="#">Tag 1</a></li>
-                            <li><a href="#">Tag 2</a></li>
-                            <li><a href="#">Tag 3</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <!-- /.row -->
+            <!-- Resource Tags -->
+            <div style="padding: 25px;">
+                <h4>Tags</h4>
+                    <ul class="list-unstyled">
+                        {% for t in all_tags %}
+                            <li><a href="/tag?tag={{t}}" class="post-tag">{{t}}</a></li>
+                        {% endfor %}
+                    </ul>
             </div>
         </div>
 
@@ -131,7 +123,11 @@
                                 <td><a href="/resource?resource_id={{ r.key.id() }}">{{ r.resource_name }}</a></td>
                                 <td>{{ r.avail_date }}</td>
                                 <td>{{ r.start_time}} to {{ r.end_time }}</td>
-                                <td>{{ r.tags }}</td>
+                                <td>
+                                    {% for t in r.tags %}
+                                        <a href="/tag?tag={{t}}" class="post-tag">{{t}}</a>
+                                    {% endfor %}
+                                </td>
                             </tr>
                             {% endfor %}
                         </tbody>
@@ -154,7 +150,11 @@
                                 <td><a href="/resource?resource_id={{ r.key.id() }}">{{ r.resource_name }}</a></td>
                                 <td>{{ r.avail_date }}</td>
                                 <td>{{ r.start_time}} to {{ r.end_time }}</td>
-                                <td>{{ r.tags }}</td>
+                                <td>
+                                    {% for t in r.tags %}
+                                        <a href="/tag?tag={{t}}" class="post-tag">{{t}}</a>
+                                    {% endfor %}
+                                </td>
                             </tr>
                             {% endfor %}
                         </tbody>
