--- a/templates/show_resource.html
+++ b/templates/show_resource.html
@@ -34,7 +34,6 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li><a href="/">Home</a></li>
-                    <li><a href="#">About</a></li>
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container -->
@@ -78,7 +77,7 @@
                             </select>
                         </div>
                         Tags<br>
-                        <input type=text name="tags" class="form-control" value="{{ resource.tags }}"></input>
+                        <input type=text name="tags" class="form-control" value="{% for t in resource.tags %}{{ t }} {% endfor %}"></input>
                         <input type="hidden" name="edit-btn" value="first"></input>
                         <input type="hidden" name="resouId" value="{{ resource.key.id() }}"></input>
                         {% if canEdit %}
