--- a/templates/index.html
+++ b/templates/index.html
@@ -78,7 +78,7 @@
                     <span class="input-group-btn">
                         <button class="btn btn-default" type="button">
                             <span class="glyphicon glyphicon-search"></span>
-                    </button>
+                        </button>
                     </span>
                 </div>
                 <!-- /.input-group -->
@@ -89,11 +89,9 @@
             <!-- Resource Tags -->
             <div style="padding: 25px;">
                 <h4>Tags</h4>
-                    <ul class="list-unstyled">
-                        {% for t in all_tags %}
-                            <li><a href="/tag?tag={{t}}" class="post-tag">{{t}}</a></li>
-                        {% endfor %}
-                    </ul>
+                {% for t in all_tags %}
+                    <a href="/tag?tag={{t}}" class="post-tag">{{t}}</a>
+                {% endfor %}
             </div>
         </div>
 
@@ -115,6 +113,7 @@
                             <th>Date</th>
                             <th>Time(0-24)</th>
                             <th>Tags</th>
+                            <th>RSS</th>
                           </tr>
                         </thead>
                         <tbody>
@@ -122,12 +121,13 @@
                             <tr>
                                 <td><a href="/resource?resource_id={{ r.key.id() }}">{{ r.resource_name }}</a></td>
                                 <td>{{ r.avail_date }}</td>
-                                <td>{{ r.start_time}} to {{ r.end_time }}</td>
+                                <td>{{ r.start_time}} - {{ r.end_time }}</td>
                                 <td>
                                     {% for t in r.tags %}
                                         <a href="/tag?tag={{t}}" class="post-tag">{{t}}</a>
                                     {% endfor %}
                                 </td>
+                                <td><a href="/rss?resource_id={{r.key.id()}}" class="btn btn-info">RSS</a></td>
                             </tr>
                             {% endfor %}
                         </tbody>
@@ -137,24 +137,26 @@
                 <div class="tab-pane" id="tab2">
                     <table class="table table-hover">
                         <thead>
-                          <tr>
-                            <th>Name </th>
-                            <th>Date</th>
-                            <th>Time(0-24)</th>
-                            <th>Tags</th>
-                          </tr>
+                            <tr>
+                                <th>Name </th>
+                                <th>Date</th>
+                                <th>Time(0-24)</th>
+                                <th>Tags</th>
+                                <th>RSS</th>
+                            </tr>
                         </thead>
                         <tbody>
                             {% for r in user_resources %}
                             <tr>
                                 <td><a href="/resource?resource_id={{ r.key.id() }}">{{ r.resource_name }}</a></td>
                                 <td>{{ r.avail_date }}</td>
-                                <td>{{ r.start_time}} to {{ r.end_time }}</td>
+                                <td>{{ r.start_time}} - {{ r.end_time }}</td>
                                 <td>
                                     {% for t in r.tags %}
                                         <a href="/tag?tag={{t}}" class="post-tag">{{t}}</a>
                                     {% endfor %}
                                 </td>
+                                <td><a href="/rss?resource_id={{r.key.id()}}" class="btn btn-info">RSS</a></td>
                             </tr>
                             {% endfor %}
                         </tbody>
@@ -177,7 +179,7 @@
                                 <td><a href="/resource?resource_id={{ r.resource_id }}">{{ r.resource_name }}</a></td>
                                 <td>{{ r.book_person }}</td>
                                 <td>{{ r.avail_date }}</td>
-                                <td>{{ r.start_time }} to {{ r.end_time }}</td>
+                                <td>{{ r.start_time }} - {{ r.end_time }}</td>
                                 <td><a class="btn btn-danger" href="/deleteReserv?reser_id={{ r.key.id() }}">Delete</a></td>
                             </tr>
                             {% endfor %}
