turnoff rss function

--- a/templates/index.html
+++ b/templates/index.html
@@ -127,7 +127,7 @@
                                         <a href="/tag?tag={{t}}" class="post-tag">{{t}}</a>
                                     {% endfor %}
                                 </td>
-                                <td><a href="/rss?resource_id={{r.key.id()}}" class="btn btn-info">RSS</a></td>
+                                <td><a href="/" class="btn btn-info">RSS</a></td>
                             </tr>
                             {% endfor %}
                         </tbody>
@@ -156,7 +156,7 @@
                                         <a href="/tag?tag={{t}}" class="post-tag">{{t}}</a>
                                     {% endfor %}
                                 </td>
-                                <td><a href="/rss?resource_id={{r.key.id()}}" class="btn btn-info">RSS</a></td>
+                                <td><a href="/" class="btn btn-info">RSS</a></td>
                             </tr>
                             {% endfor %}
                         </tbody>
